update ft:messages